Bug 365941 - Not right icons in the dolphin places panel on a HiDPI screen
Summary: Not right icons in the dolphin places panel on a HiDPI screen
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: places (other bugs)
Version First Reported In: 15.12.3
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-21 11:30 UTC by john.kirk
Modified: 2018-06-06 07:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The screenshot. (130.44 KB, image/png)
2016-07-22 10:51 UTC, john.kirk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description john.kirk 2016-07-21 11:30:52 UTC
Dear Developer, 

On a HiDPI screen icons in the dolphin places panel are the same as common icons (blue), but smaller. This is different from non-HIDPI screen where they are not blue. 

Best wishes, 
John

Reproducible: Always


Actual Results:  
Different icons. 

Expected Results:  
The same icons. 

Thank you.
Comment 1 Thomas Pfeiffer 2016-07-21 15:25:12 UTC
This is a problem in KIconItem (I suppose): The folder it uses the icons from should be independent from the DPI. Since we use SVGs, scaling up is not a problem, but the larger icon versions were designed for places where they are physically larger on the screen, and should not be used in place of the smaller ones just because we have higher DPI.
Comment 2 Thomas Pfeiffer 2016-07-21 16:09:54 UTC
John, could you please attach a screenshot so we can see exactly how it happens?
Comment 3 john.kirk 2016-07-22 10:51:59 UTC
Created attachment 100245 [details]
The screenshot.
Comment 4 Aleix Pol 2016-07-22 12:44:10 UTC
Problem is in the PlacesView in Dolphin.
Comment 5 Nate Graham 2018-03-29 16:53:58 UTC
The whole point of scaling on HiDPI is to be able to display prettier graphics. The pretty icons you're seeing do not render well at small sizes without a HiDPI display, which why for those cases they're rendered as monochrome line-art instead. So it's not clear that this is actually a bug.

If it is indeed considered a bug, there's a patch that fixes it: https://phabricator.kde.org/D6313
Comment 6 Kai Uwe Broulik 2018-06-06 07:42:37 UTC
Git commit 20f7137145f6b6fb38d2c3dd01a8443b8315cf41 by Kai Uwe Broulik.
Committed on 06/06/2018 at 07:40.
Pushed by broulik into branch 'master'.

Support Icon Scale from Icon naming specification 0.13

Since Qt 5.9 there's a ScaledPixmapHook in QIconEngine which is called when device pixel ratio is > 1 and it wants a scaled pixmap.
In contrast to regular pixmap() this also knows the scale factor.

Implement support for Icon Scale properties introduced in Icon naming specification 0.13 [1] to choose an appropriate icon,
if available, rather than blatantly loading a larger icon that may not fit in the context and also could be hard to tell as
its physical size will be smaller than what it was designed for.

[1] https://specifications.freedesktop.org/icon-theme-spec/icon-theme-spec-0.13.html

Differential Revision: https://phabricator.kde.org/D6313

M  +23   -4    src/kiconengine.cpp
M  +1    -0    src/kiconengine.h
M  +46   -26   src/kiconloader.cpp
M  +58   -0    src/kiconloader.h
M  +130  -79   src/kicontheme.cpp
M  +31   -0    src/kicontheme.h

https://commits.kde.org/kiconthemes/20f7137145f6b6fb38d2c3dd01a8443b8315cf41